# airlift

./: Cargo.toml
app/: .gitignore  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: layout.tsx  offer.tsx
cli/: Cargo.toml
cli/src/: main.rs
proto/: Cargo.toml
proto/examples/: discover.rs
proto/src/: lib.rs  main.rs  tcp.rs  udp.rs
